--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -45,6 +45,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
+    overflow: hidden;
 }
 
 ol, ul {
@@ -94,11 +95,12 @@ h1 {
 
 h2 {
     font: 40px/150% 'Raleway', Arial, sans-serif;
+    color: #2B2B2B;
 }
 
 h3 {
     font: 500 16px/150% 'Raleway', Arial, sans-serif;
-    color: #2E64D9;
+    color: #FF7700;
 }
 
 h4 {
@@ -128,13 +130,13 @@ figure {
 }
 
 ::selection {
-    background: white;
-    color: #2E64D9;
+    background: #2B2B2B;
+    color: #FF7700;
 }
 
 ::-moz-selection {
-    background: white;
-    color: #2E64D9;
+    background: #2B2B2B;
+    color: #FF7700;
 }
 
 ::-webkit-scrollbar {
@@ -148,7 +150,7 @@ figure {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #2E64D9;
+    background-color: #FF7700;
 }
 
 /* CH02 - Navigation Menu */
@@ -160,7 +162,7 @@ figure {
     position: fixed;
     bottom: 0;
     z-index: 10000;
-    border-top: 2px solid #2E64D9;
+    border-top: 2px solid #FF7700;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -182,11 +184,11 @@ figure {
 }
 
 #fixed-nav-bar li a:hover {
-    color: #2E64D9;
+    color: #FF7700;
 }
 
 #fixed-nav-bar .active {
-    color: #2E64D9;
+    color: #FF7700;
 }
 
 /* CH03 - Title Screen */
@@ -214,7 +216,7 @@ figure {
 .border-text {
     display: inline-block;
     padding: 5px 10px;
-    border: 2px solid #2E64D9;
+    border: 2px solid #FF7700;
 }
 
 /* CH05 - About Screen */
@@ -236,7 +238,7 @@ figure {
 }
 
 .div-max-width {
-    max-width: 1000px;
+    max-width: 1020px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -310,7 +312,7 @@ figcaption p {
 
 figcaption a {
     font: bold 12px/150% 'PT Sans', Arial, sans-serif;
-    color: #2E64D9;
+    color: #FF7700;
     -moz-transition: color .5s ease;
     -o-transition: color .5s ease;
     -webkit-transition: color .5s ease;
@@ -321,12 +323,12 @@ figcaption a {
     z-index: 1;
     width: 160px;
     height: 30px;
-    color: white;
+    color: #2B2B2B;
     font: 600 14px/30px 'Raleway', Arial, sans-serif;
     text-transform: uppercase;
     text-align: center;
     border-radius: 1px;
-    background-color: #2E64D9;
+    background-color: #FF7700;
     position: absolute;
     bottom: 30px;
     left: 15px;
