Change hover icons and fix styling

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -440,7 +440,7 @@ figcaption a:hover {
 }
 
 .copyright {
-    color: white;
+    color: #2B2B2B;
     margin-bottom: 60px;
     font-size: 12px;
 }
