--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -26,20 +26,19 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
+figure, figcaption, footer, header,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
     font: inherit;
     vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, menu, nav, section {
     display: block;
 }
 
@@ -54,12 +53,6 @@ ol, ul {
 
 blockquote, q {
     quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
 }
 
 table {
@@ -238,7 +231,7 @@ figure {
 }
 
 .div-max-width {
-    max-width: 1020px;
+    max-width: 1040px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -384,51 +377,48 @@ figcaption a:hover {
     color: #2B2B2B;
 }
 
-.icon {
+.icon-row {
+    width: 100%;
+    height: 56px;
+}
+
+.icon-container {
+    width: 50px;
+    height: 50px;
+    margin: 0 2px;
+    position: relative;
+    display: inline-block;
+}
+
+.icon-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 50px;
     height: 50px;
     margin: 0;
     display: inline-block;
-    -webkit-transition: background-image 0.25s ease-out;
-    -moz-transition: background-image 0.25s ease-out;
-    -o-transition: background-image 0.25s ease-out;
-    transition: background-image 0.25s ease-out;
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease;
 }
 
-#mail {
-    background-image: url('../images/mail.png');
-    background-size: cover;
+.icon {
+    filter: alpha(opacity=100);
+    opacity: 1;
+    z-index: 1;
 }
 
-#mail:hover {
-    background-image: url('../images/mail-hover.png');
+.icon-hover {
+    filter: alpha(opacity=0);
+    opacity: 0;
+    z-index: 2;
 }
 
-#linkedin {
-    background-image: url('../images/linkedin.png');
-    background-size: cover;
-}
-
-#linkedin:hover {
-    background-image: url('../images/linkedin-hover.png');
-}
-
-#facebook {
-    background-image: url('../images/facebook.png');
-    background-size: cover;
-}
-
-#facebook:hover {
-    background-image: url('../images/facebook-hover.png')
-}
-
-#github {
-    background-image: url('../images/github.png');
-    background-size: cover;
-}
-
-#github:hover {
-    background-image: url('../images/github-hover.png');
+.icon-hover:hover {
+    filter: alpha(opacity=100);
+    opacity: 1;
 }
 
 .bottom-absolute {
@@ -515,7 +505,11 @@ figcaption a:hover {
         width: 300px;
     }
 
-    .icon {
+    .icon-row {
+        height: 66px;
+    }
+
+    .icon-container, .icon-container img {
         width: 60px;
         height: 60px;
     }
